增加文章详情,增加回到顶部按钮

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -8,10 +8,11 @@
     <meta name="description" content="Blog">
     <meta name="keywords" content="vue">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" rel="stylesheet">
   </head>
   <body>
+    <!--vue-ssr-outlet-->
     <noscript id="deferred-styles"></noscript>
   </body>
 </html>
